[tool.poetry]
name = "repl-nix-tweet-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_tweet_sentiment_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
textblob = "^0.18.0.post0"
tweepy = "^4.14.0"
snscrape = "^0.7.0.20230622"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
